# ft-icon

./: .gitignore  README.md  pyproject.toml
example/: icon_types.py  main.py  pyproject.toml  start.py
src/ft_icon/: __init__.py  build_sprite.py  config.py  icon.py  middleware.py  path.py
